--- a/.github/workflows/test-remote.yml
+++ b/.github/workflows/test-remote.yml
@@ -47,12 +47,15 @@ jobs:
       ON_CI: True
       ON_LOCAL: FALSE
       ON_UBUNTU: FALSE
+      PYANSYS_OFF_SCREEN: True
+      PYMAPDL_DEBUG_TESTING: True
       PYMAPDL_START_INSTANCE: FALSE
       PYMAPDL_PORT: 21000  # default won't work on GitHub runners
       PYMAPDL_PORT2: 21001  # for the pool testing and default won't work on GitHub runners
       PYMAPDL_DB_PORT: 21002  # default won't work on GitHub runners
       PYMAPDL_DB_PORT2: 21003  # default won't work on GitHub runners
       DPF_PORT: 21004
+      DPF_START_SERVER: False
       PYTEST_ARGUMENTS: '-vvv -rxXsa --color=yes --durations=30 --random-order --random-order-bucket=class --maxfail=10 --reruns 3 --reruns-delay 4 --cov=ansys.mapdl.core --cov-report=html --timeout=180 --profile-svg --profile'
       MAIN_PYTHON_VERSION: '3.12'
       MAPDL_PACKAGE: ghcr.io/ansys/mapdl
