fix: adding console testing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -256,7 +256,7 @@ jobs:
       mapdl-version: ${{ matrix.mapdl-version }}
       testing-minimal: true
       on-console: true
-      pytest-arguments: '-k console'
+      pytest-arguments: '--console -k console'
       file-name: "${{ matrix.mapdl-version }}-minimal-console"
       tags: "local,minimal,console"
 
