--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -254,11 +254,11 @@ jobs:
     with:
       latest-version: "252"
       mapdl-version: ${{ matrix.mapdl-version }}
-      testing-minimal: true
+      testing-minimal: false
       on-console: true
       pytest-arguments: '--console -k console'
-      file-name: "${{ matrix.mapdl-version }}-minimal-console"
-      tags: "local,minimal,console"
+      file-name: "${{ matrix.mapdl-version }}-console"
+      tags: "local,console"
 
   test-windows:
     # Skipped
