--- a/.github/workflows/test-local.yml
+++ b/.github/workflows/test-local.yml
@@ -48,7 +48,7 @@ on:
       tags:
         description: |
           Tags to add to the coverage report.
-        required: true
+        required: false
         type: string
 
       codecov-report:
