--- a/.github/workflows/test-local.yml
+++ b/.github/workflows/test-local.yml
@@ -139,13 +139,13 @@ jobs:
         shell: bash
         if: inputs.testing-minimal == true
         run: |
-          sudo apt-get update && apt install -y libgomp1 graphviz
+          apt-get update && apt install -y libgomp1 graphviz
 
       - name: "Installing OS packages"
         shell: bash
         if: inputs.testing-minimal == false
         run: |
-          sudo apt-get update && apt install -y libgl1-mesa-glx xvfb libgomp1 graphviz
+          apt-get update && apt install -y libgl1-mesa-glx xvfb libgomp1 graphviz
 
       - name: "Setup Python"
         uses: actions/setup-python@v5
