--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,7 @@ tests = [
 doc = [
     "ansys-dpf-core==0.10.1",
     "ansys-mapdl-reader==0.54.2",
-    "ansys-sphinx-theme @ git+https://github.com/ansys/ansys-sphinx-theme.git@fix/quarto-logging",
+    "ansys-sphinx-theme==1.4.1",
     "ansys-tools-visualization-interface==0.8.3",
     "grpcio==1.70.0",
     "imageio-ffmpeg==0.6.0",
