--- a/.devcontainer/codespaces-docs/Dockerfile
+++ b/.devcontainer/codespaces-docs/Dockerfile
@@ -8,7 +8,7 @@ ENV ON_CODESPACES=true
 ENV CODESPACES_MODE=docs
 
 # Installing libs for testing and docs
-RUN apt-get -qq update && apt install -qq -y zip pandoc libgl1-mesa-glx xvfb texlive-latex-extra latexmk graphviz texlive-xetex && \
+RUN apt-get -qq update && apt install -qq -y zip pandoc libgl1 libglx-mesa0 xvfb texlive-latex-extra latexmk graphviz texlive-xetex && \
     apt-get -qq clean  && rm -rf /var/lib/apt/lists/* && \
     usermod -s /bin/bash $USERNAME && \
     usermod -a -G sudo $USERNAME && \
