--- a/.github/workflows/test-remote.yml
+++ b/.github/workflows/test-remote.yml
@@ -42,7 +42,7 @@ on:
 
 jobs:
   test-remote:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     env:
       ON_CI: True
       ON_LOCAL: FALSE
@@ -161,7 +161,7 @@ jobs:
         shell: bash
         run: |
           sudo apt update
-          sudo apt install libgl1-mesa-glx xvfb graphviz
+          sudo apt install libgl1 libglx-mesa0 xvfb graphviz
 
       - name: "Test virtual framebuffer"
         shell: bash
